Create graphic interface

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Particle/src/Labo.cpp
 Particle/README.md
 
 Particle/project.properties
+
+interface/package-lock.json
+
+interface/public/robots.txt
