--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ Particle/src/Labo.cpp
 
 Particle/README.md
 
-Particle/project.properties
-
 interface/package-lock.json
 
 interface/public/robots.txt
+
+*.bak
