--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+/Archive/node_modules/*
 /NodeApp/node_modules/*
 
 NodeApp/package-lock.json
@@ -14,3 +14,5 @@ interface/package-lock.json
 interface/public/robots.txt
 
 *.bak
+
+Archive/package-lock.json
