--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /Archive/node_modules/*
 /NodeApp/node_modules/*
 /Control/node_modules/*
+/Relai/node_modules/*
 
 NodeApp/package-lock.json
 
@@ -17,5 +18,5 @@ interface/public/robots.txt
 *.bak
 
 Control/package-lock.json
-
+Relai/package-lock.json
 Archive/package-lock.json
